@@ -44,6 +44,17 @@
   <!-- Generated by  http://apps-xdgapp.rhcloud.com/oars -->
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="46~rc" date="2024-03-02" type="development">
+      <description>
+        <p>Overview of changes in lightsoff 46.rc</p>
+        <ul>
+          <li>Updated translations</li>
+          <li>Appdata fixes (Sabri Ünal)</li>
+          <li>Exclude source SVG icons (Robert Roth)</li>
+          <li>Help fix describing menu button location (Rafael Fontenelle)</li>
+        </ul>
+      </description>
+    </release>
     <release version="46~alpha" date="2024-01-06" type="development">
       <description>
         <p>Overview of changes in lightsoff 46.alpha</p>
